 *
 * CHANGELOG.txt
 * @since  1.6.05
 */
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2018-10-31 [A] Added hidden config option to choose if auto-orient is checked by default in upload forms {eenemeenemuu}
2018-10-30 [B] Fixed misleading approval message if approval is not needed when using single upload form {eenemeenemuu}
2018-10-17 [B] Correction to bridge file for SMF 2.1 (thanks maximus23) {ron4mac}
2018-10-17 [B] Correct error when extracting EXIF from some Canon images (thanks jsh) {ron4mac}
2018-09-20 [B] Provide english fallback for remote help (thanks tbsmark86) {ron4mac}
2018-08-25 [B] Added charset support for PDO driver {chipviled}
2018-07-25 [M] Replaced headers in files changed since 1.6.03 for use in '@since' versioning {ron4mac}
2018-07-25 [A] Removed documentation from distribution; online (coppermine-gallery.net) access to docs with option for local copy {ron4mac}
2018-07-25 [M] Advance supplied jQuery version from 1.4.2(1.4.4) to 1.7.2 {ron4mac}
2018-06-22 [B] Corrections for database connection ports and bridging errors {ron4mac}
2018-06-20 [A] Provide method for themes to have/use language files {ron4mac}
2018-03-25 [B] Correct condition where some uploads did not generate email to admin, even though configured to do so {ron4mac}
2018-03-07 [B] Fixed SET NAMES query for mysqli (thanks SiavaRu) {ron4mac}
2018-01-26 [B] Fixed typo causing phpBB3 bridge fail when using bridge app custom groups (thread ID 79302) {eenemeenemuu}
2018-01-16 [B] Fixed white screens with low privileged users clicking into open albums when using theme "curve" (thread ID 79283) {eenemeenemuu}
2018-01-14 [B] Prevent install failure with PDO on PHP 7.1+ {ron4mac}