@@ -1,17 +1,14 @@
-/*************************
-  Coppermine Photo Gallery
-  ************************
-  Copyright (c) 2003-2016 Coppermine Dev Team
-  v1.0 originally written by Gregory DEMAR
-
-  This program is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License version 3
-  as published by the Free Software Foundation.
-
-  ********************************************
-  Coppermine version: 1.6.03
-  $HeadURL$
-**********************************************/
+/**
+ * Coppermine Photo Gallery
+ *
+ * v1.0 originally written by Gregory Demar
+ *
+ * @copyright  Copyright (c) 2003-2018 Coppermine Dev Team
+ * @license    GNU General Public License version 3 or later; see LICENSE
+ *
+ * js/admin.js
+ * @since  1.6.05
+ */
 
 function resetToDefault(theFieldId, fieldType, numberOfItems) 
 {
@@ -170,6 +167,12 @@ function adminPageLoaded(){
 			});
 		});
 	}
+}
+
+function mfuCalc (id) {
+	var n = $('#'+id+'_n').val();
+	var m = $('#'+id+'_m').val();
+	$('#'+id).val(n*m);
 }
 
 addonload('adminPageLoaded()');
